--- a/database/config/config.json
+++ b/database/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "sendpackdb_production",
-    "password": "sendpack!2020",
-    "database": "database_production",
+    "username": "root",
+    "password": "",
+    "database": "empleochaco",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
